--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.13",
     "daisyui": "^4.12.2",
+    "firebase": "^10.12.2",
     "highlight.js": "^11.9.0",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
-    "xss": "^1.0.15"
+    "xss": "^1.0.15",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
