--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "uuid": "^10.0.0",
     "xss": "^1.0.15",
     "zod": "^3.23.8"
   },
@@ -24,6 +25,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
