--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18",
     "uuid": "^10.0.0",
     "xss": "^1.0.15",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
