--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "tsc:watch": "tsc --noEmit --watch"
+    "tsc:watch": "tsc --noEmit --watch",
+    "test": "jest --watchAll --detectOpenHandles"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.13",
     "daisyui": "^4.12.2",
     "firebase": "^10.12.2",
     "highlight.js": "^11.9.0",
+    "lodash": "^4.17.21",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
@@ -23,6 +25,8 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -31,9 +35,11 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "firebase-tools": "^13.11.2",
+    "jest": "^29.7.0",
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.6.2",
     "tailwindcss": "^3",
+    "ts-jest": "^29.1.4",
     "typescript": "^5"
   }
 }
