--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "next start",
     "lint": "next lint",
     "tsc:watch": "tsc --noEmit --watch",
-    "test": "jest --watchAll --detectOpenHandles"
+    "test": "jest --watchAll --detectOpenHandles",
+    "firebase:init": "firebase init",
+    "firebase:emulators-start": "firebase emulators:start",
+    "firebase:deploy-rules": "firebase deploy --only firestore:rules",
+    "dev:local": "NEXT_PUBLIC_USE_FIREBASE_EMULATOR=true next dev"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.13",
@@ -38,7 +42,7 @@
     "jest": "^29.7.0",
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.6.2",
-    "tailwindcss": "^3",
+    "tailwindcss": "^3.4.4",
     "ts-jest": "^29.1.4",
     "typescript": "^5"
   }
