some firestore shiz

--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,7 @@
 {
   "hosting": {
     "source": ".",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "frameworksBackend": {
       "region": "europe-west1"
     }
@@ -26,7 +22,7 @@
       "port": 9099
     },
     "hosting": {
-      "port": 5000
+      "port": 5004
     }
   }
 }
